# CLionDualTargetsExample

./: CMakeLists.txt  Foo.cpp  Foo.hpp  main.cpp  tests.cpp
